fix(plugin): register plugins when main manifest found
Signed-off-by: Hiroshi Miura <miurahr@linux.com>